# propsproject06643

./: .gitignore  CLAUDE.md  PLAN.txt  README.md  STAGE 2 PLAN.txt  STAGE 3 PLAN.txt  available_properties.csv  example_multi_prop_calc.py  pyproject.toml  test_cli.ps1  test_multi_prop.py
.github/workflows/: tests.yml
src/idaes_props/: __init__.py  calculator.py  cli.py  engine.py  plotter.py
src/idaes_props.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: example_multi_prop_calc.py  example_multi_prop_range_calc.py  example_plot.py  example_plot_viscosity.py  example_property_calculation.py  example_saturation.py  example_single_prop_calc.py  test_calculator.py  test_cli_export.py  test_cli_plot.py  test_plotter.py  test_skip_failures.py
